    submitted via salloc/srun or sbatch <script> (not via --wrap).
 -- Job command/script name is now packed with no arguments, thus clients
    displaying job information will only show the command/script name.
 -- Make acct_gather_energy plugins handle slurmd reconfiguration and support
    restart for gpu and xcc implementations.

* Changes in Slurm 22.05.6
==========================
 -- Fix a partition's DisableRootJobs=no from preventing root jobs from working.

* Changes in Slurm 22.05.5
==========================
 -- Fix node becoming IDLE while in an invalid registration state.
 -- When a job is completing avoid potential dereference.
 -- Avoid setting preempt_time for a job erroneously.
 -- Fix situation where we don't requeue correctly when a job is finishing.
 -- job_container/tmpfs - Avoid leaking namespace file descriptor.
 -- common/slurm_opt - fix memory leak in client commands or slurmrestd when the
    --chdir option is set after option reset.
 -- openapi/dbv0.0.38 - gracefully handle unknown associations assigned to jobs.
 -- openapi/dbv0.0.38 - query all associations to avoid errors while dumping
    jobs.
 -- Load hash plugin at slurmstepd launch time to prevent issues loading the
    plugin at step completion if the Slurm installation is upgraded.
 -- Fix gcc 12.2.1 compile errors.
 -- Fix future magnetic reservations preventing heterogeneous jobs from
    starting.
 -- Prevent incorrect error message from being generated for operator/admins
    using the 'scontrol top' command.
 -- slurmrestd - correct issue where larger requests could result in a single
    byte getting removed from inside of the POST request.
 -- Fix regression in task count calculation for --ntasks-per-gpu with multiple
    nodes.
 -- Update nvml plugin to match the unique id format for MIG devices in new
    Nvidia drivers.
 -- Fix segfault on backup slurmdbd if no QoS is present in DB.
 -- Fix clang 11 compile errors.